Revert "Fix stretch issue in mobile devices"
This reverts commit 22558d343356008b269bcb020275bfdc2a9c8ea5.

--- a/site/components/quote/style.css
+++ b/site/components/quote/style.css
@@ -27,7 +27,6 @@ blockquote:after {
 }
 .quotation__author {
   display: flex;
-  display: -webkit-box;
   margin-top: 16px;
 }
 
